--- a/Assets/Ringtone/Touch/Ringtone.Touch.asmdef
+++ b/Assets/Ringtone/Touch/Ringtone.Touch.asmdef
@@ -1,9 +1,7 @@
 {
-    "name": "Ringtone.Notes",
+    "name": "Ringtone.Touch",
     "references": [
-        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
-        "GUID:aea53503f916a8648b195af9244d41c8",
-        "GUID:265249aa1e738ac48b6f94d8e072cf02"
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
