--- a/Assets/Ringtone/Input/Ringtone.Input.asmdef
+++ b/Assets/Ringtone/Input/Ringtone.Input.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Ringtone.Player.Input",
+    "name": "Ringtone.Input",
     "references": [
         "GUID:560b04d1a97f54a4e82edc0cbbb69285"
     ],
